@@ -13,6 +13,7 @@ Revision history for {{$dist->name}}
     - no critic (ValuesAndExpressions::ProhibitMagicNumbers)
     - Fix critic (References::ProhibitDoubleSigils)
     - Fix critic (InputOutput::RequireBracedFileHandleWithPrint)
+    - Fix critic (Modules::ProhibitAutomaticExportation) and (ClassHierarchies::ProhibitExplicitISA)
 
 0.100     2019-07-05 11:35:04+02:00 Europe/Stockholm
     - Bump version number to 0.100 because 0.010 is less than 0.09.
